bindings/swift/Sources/CProven/include/proven.h

/* ============================================================================
 * Status Codes
 * ============================================================================ */

typedef enum ProvenStatus {
    PROVEN_OK = 0,
    PROVEN_ERR_NULL_POINTER = -1,
    PROVEN_ERR_INVALID_ARGUMENT = -2,
    PROVEN_ERR_OVERFLOW = -3,
    PROVEN_ERR_UNDERFLOW = -4,
    PROVEN_ERR_DIVISION_BY_ZERO = -5,
    PROVEN_ERR_PARSE_FAILURE = -6,
    PROVEN_ERR_VALIDATION_FAILED = -7,
    PROVEN_ERR_OUT_OF_BOUNDS = -8,
    PROVEN_ERR_ENCODING_ERROR = -9,
    PROVEN_ERR_ALLOCATION_FAILED = -10,
    PROVEN_ERR_NOT_IMPLEMENTED = -99
} ProvenStatus;
/* ============================================================================
 * Result Types
 * ============================================================================ */

typedef struct ProvenIntResult {
    ProvenStatus status;
    int64_t value;
} ProvenIntResult;
typedef struct ProvenFloatResult {
    ProvenStatus status;
    double value;
} ProvenFloatResult;
typedef struct ProvenColorResult {
    ProvenStatus status;
    ProvenRGBColor color;
} ProvenColorResult;
ProvenColorResult proven_color_parse_hex(const uint8_t* ptr, size_t len);
/* ============================================================================
 * SafeUnit
 * ============================================================================ */

typedef enum ProvenLengthUnit {
    PROVEN_LENGTH_METERS = 0,
    PROVEN_LENGTH_KILOMETERS = 1,
    PROVEN_LENGTH_CENTIMETERS = 2,
    PROVEN_LENGTH_MILLIMETERS = 3,
    PROVEN_LENGTH_FEET = 4,
    PROVEN_LENGTH_INCHES = 5,
    PROVEN_LENGTH_MILES = 6,
    PROVEN_LENGTH_YARDS = 7
} ProvenLengthUnit;
ProvenFloatResult proven_unit_convert_length(double value, ProvenLengthUnit from, ProvenLengthUnit to);
double proven_probability_and(double a, double b);
double proven_probability_not(double p);
/* ============================================================================
 * SafeBuffer (FFI-level: proven_buffer_*)
 * ============================================================================ */

typedef struct ProvenBoundedBuffer ProvenBoundedBuffer;
typedef struct ProvenBufferResult {
    ProvenStatus status;
    ProvenBoundedBuffer* buffer;
} ProvenBufferResult;
ProvenBufferResult proven_buffer_create(size_t capacity);
void proven_buffer_free(ProvenBoundedBuffer* buffer);
/* ============================================================================
 * SafeQueue (FFI-level: proven_queue_*)
 * ============================================================================ */

typedef struct ProvenBoundedQueue ProvenBoundedQueue;
ProvenBoundedQueue* proven_queue_create(size_t capacity);
bool proven_queue_push(ProvenBoundedQueue* queue, int64_t value);
ProvenIntResult proven_queue_pop(ProvenBoundedQueue* queue);
void proven_queue_free(ProvenBoundedQueue* queue);
/* ============================================================================
 * SafeBloom (FFI-level: proven_bloom_*)
 * ============================================================================ */

typedef struct ProvenBloomFilter ProvenBloomFilter;
ProvenBloomFilter* proven_bloom_create(size_t expected_elements, double false_positive_rate);
bool proven_bloom_contains(ProvenBloomFilter* filter, const uint8_t* ptr, size_t len);
void proven_bloom_free(ProvenBloomFilter* filter);
/* ============================================================================
 * SafeCircuitBreaker (FFI-level: proven_circuit_breaker_*)
 * ============================================================================ */

typedef enum ProvenCircuitState {
    PROVEN_CIRCUIT_CLOSED = 0,
    PROVEN_CIRCUIT_OPEN = 1,
    PROVEN_CIRCUIT_HALF_OPEN = 2
} ProvenCircuitState;
typedef struct ProvenCircuitBreaker ProvenCircuitBreaker;
ProvenCircuitBreaker* proven_circuit_breaker_create(uint32_t failure_threshold, uint32_t success_threshold, int64_t timeout_ms);
bool proven_circuit_breaker_allow(ProvenCircuitBreaker* cb);
ProvenCircuitState proven_circuit_breaker_state(ProvenCircuitBreaker* cb);
void proven_circuit_breaker_free(ProvenCircuitBreaker* cb);
/* ============================================================================
 * SafeStateMachine (FFI-level: proven_state_machine_*)
 * ============================================================================ */

typedef struct ProvenStateMachine ProvenStateMachine;
ProvenStateMachine* proven_state_machine_create(uint32_t state_count, uint32_t initial_state);
bool proven_state_machine_transition(ProvenStateMachine* sm, uint32_t to);
void proven_state_machine_free(ProvenStateMachine* sm);
/* ============================================================================
 * SafeLRU (FFI-level: proven_lru_*)
 * ============================================================================ */

typedef struct ProvenLRUCache ProvenLRUCache;
ProvenLRUCache* proven_lru_create(size_t capacity);
ProvenIntResult proven_lru_get(ProvenLRUCache* cache, uint64_t key);
ProvenStatus proven_lru_put(ProvenLRUCache* cache, uint64_t key, int64_t value);
void proven_lru_free(ProvenLRUCache* cache);
/* ============================================================================
 * SafeGraph (FFI-level: proven_graph_*)
 * ============================================================================ */

typedef struct ProvenGraph ProvenGraph;
ProvenGraph* proven_graph_create(size_t node_count);
ProvenStatus proven_graph_add_edge(ProvenGraph* graph, size_t from, size_t to);
void proven_graph_free(ProvenGraph* graph);