bindings/python/proven/core.py


    lib.proven_checksum_fnv1a_32.argtypes = [ctypes.c_char_p, ctypes.c_size_t]
    lib.proven_checksum_fnv1a_32.restype = UInt32Result

    lib.proven_checksum_luhn_check.argtypes = [ctypes.c_char_p, ctypes.c_size_t]
    lib.proven_checksum_luhn_check.restype = BoolResult

    # SafeProbability
    lib.proven_probability_clamp.argtypes = [ctypes.c_double]
    lib.proven_probability_clamp.restype = DoubleResult

    lib.proven_probability_and.argtypes = [ctypes.c_double, ctypes.c_double]
    lib.proven_probability_and.restype = DoubleResult

    lib.proven_probability_or.argtypes = [ctypes.c_double, ctypes.c_double]
    lib.proven_probability_or.restype = DoubleResult

    lib.proven_probability_not.argtypes = [ctypes.c_double]
    lib.proven_probability_not.restype = DoubleResult

    lib.proven_probability_bayes.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double]
    lib.proven_probability_bayes.restype = DoubleResult

    lib.proven_probability_binomial.argtypes = [ctypes.c_int, ctypes.c_int, ctypes.c_double]
    lib.proven_probability_binomial.restype = DoubleResult

    # SafeUnit
    lib.proven_unit_convert_length.argtypes = [ctypes.c_double, ctypes.c_int, ctypes.c_int]
    lib.proven_unit_convert_length.restype = DoubleResult

    lib.proven_unit_convert_mass.argtypes = [ctypes.c_double, ctypes.c_int, ctypes.c_int]
    lib.proven_unit_convert_mass.restype = DoubleResult

    lib.proven_unit_convert_temperature.argtypes = [ctypes.c_double, ctypes.c_int, ctypes.c_int]
    lib.proven_unit_convert_temperature.restype = DoubleResult

    lib.proven_unit_convert_time.argtypes = [ctypes.c_double, ctypes.c_int, ctypes.c_int]
    lib.proven_unit_convert_time.restype = DoubleResult

    lib.proven_unit_convert_data.argtypes = [ctypes.c_double, ctypes.c_int, ctypes.c_int]
    lib.proven_unit_convert_data.restype = DoubleResult

    # SafeColor
    lib.proven_color_parse_hex.argtypes = [ctypes.c_char_p, ctypes.c_size_t,
                                           ctypes.POINTER(ctypes.c_uint8)]  # 4-byte RGBA out
    lib.proven_color_parse_hex.restype = ctypes.c_int

    lib.proven_color_luminance.argtypes = [ctypes.c_uint8, ctypes.c_uint8, ctypes.c_uint8]
    lib.proven_color_luminance.restype = DoubleResult

    lib.proven_color_contrast_ratio.argtypes = [ctypes.c_uint8, ctypes.c_uint8, ctypes.c_uint8,
                                                ctypes.c_uint8, ctypes.c_uint8, ctypes.c_uint8]
    lib.proven_color_contrast_ratio.restype = DoubleResult

    lib.proven_color_blend.argtypes = [ctypes.c_uint8, ctypes.c_uint8, ctypes.c_uint8,
                                       ctypes.c_uint8,  # fg RGBA
                                       ctypes.c_uint8, ctypes.c_uint8, ctypes.c_uint8,  # bg RGB
                                       ctypes.POINTER(ctypes.c_uint8)]  # 3-byte RGB out
    lib.proven_color_blend.restype = ctypes.c_int

    # SafeBuffer
    lib.proven_buffer_create.argtypes = [ctypes.c_size_t]
    lib.proven_buffer_create.restype = HandleResult

    lib.proven_buffer_push.argtypes = [ctypes.c_void_p, ctypes.c_char_p, ctypes.c_size_t]
    lib.proven_buffer_push.restype = BoolResult

    lib.proven_buffer_pop.argtypes = [ctypes.c_void_p]
    lib.proven_buffer_pop.restype = BytesResult

    lib.proven_buffer_len.argtypes = [ctypes.c_void_p]
    lib.proven_buffer_len.restype = SizeResult

    lib.proven_buffer_free.argtypes = [ctypes.c_void_p]
    lib.proven_buffer_free.restype = None

    # SafeQueue
    lib.proven_queue_create.argtypes = [ctypes.c_size_t]
    lib.proven_queue_create.restype = HandleResult

    lib.proven_queue_push.argtypes = [ctypes.c_void_p, ctypes.c_char_p, ctypes.c_size_t]
    lib.proven_queue_push.restype = BoolResult

    lib.proven_queue_pop.argtypes = [ctypes.c_void_p]
    lib.proven_queue_pop.restype = BytesResult

    lib.proven_queue_len.argtypes = [ctypes.c_void_p]
    lib.proven_queue_len.restype = SizeResult

    lib.proven_queue_free.argtypes = [ctypes.c_void_p]
    lib.proven_queue_free.restype = None

    # SafeBloom
    lib.proven_bloom_create.argtypes = [ctypes.c_size_t, ctypes.c_double]
    lib.proven_bloom_create.restype = HandleResult

    lib.proven_bloom_insert.argtypes = [ctypes.c_void_p, ctypes.c_char_p, ctypes.c_size_t]
    lib.proven_bloom_insert.restype = ctypes.c_int

    lib.proven_bloom_contains.argtypes = [ctypes.c_void_p, ctypes.c_char_p, ctypes.c_size_t]
    lib.proven_bloom_contains.restype = BoolResult

    lib.proven_bloom_free.argtypes = [ctypes.c_void_p]
    lib.proven_bloom_free.restype = None

    # SafeLru
    lib.proven_lru_create.argtypes = [ctypes.c_size_t]
    lib.proven_lru_create.restype = HandleResult

    lib.proven_lru_get.argtypes = [ctypes.c_void_p, ctypes.c_char_p, ctypes.c_size_t]
    lib.proven_lru_get.restype = BytesResult

    lib.proven_lru_put.argtypes = [ctypes.c_void_p,
                                   ctypes.c_char_p, ctypes.c_size_t,  # key
                                   ctypes.c_char_p, ctypes.c_size_t]  # value
    lib.proven_lru_put.restype = ctypes.c_int

    lib.proven_lru_remove.argtypes = [ctypes.c_void_p, ctypes.c_char_p, ctypes.c_size_t]
    lib.proven_lru_remove.restype = ctypes.c_int

    lib.proven_lru_len.argtypes = [ctypes.c_void_p]
    lib.proven_lru_len.restype = SizeResult

    lib.proven_lru_free.argtypes = [ctypes.c_void_p]
    lib.proven_lru_free.restype = None

    # SafeRateLimiter
    lib.proven_ratelimit_token_bucket_create.argtypes = [ctypes.c_double, ctypes.c_size_t]
    lib.proven_ratelimit_token_bucket_create.restype = HandleResult

    lib.proven_ratelimit_token_bucket_acquire.argtypes = [ctypes.c_void_p, ctypes.c_size_t]
    lib.proven_ratelimit_token_bucket_acquire.restype = StringResult  # JSON result

    lib.proven_ratelimit_token_bucket_free.argtypes = [ctypes.c_void_p]
    lib.proven_ratelimit_token_bucket_free.restype = None

    lib.proven_ratelimit_sliding_window_create.argtypes = [ctypes.c_size_t, ctypes.c_double]
    lib.proven_ratelimit_sliding_window_create.restype = HandleResult

    lib.proven_ratelimit_sliding_window_acquire.argtypes = [ctypes.c_void_p]
    lib.proven_ratelimit_sliding_window_acquire.restype = StringResult

    lib.proven_ratelimit_sliding_window_free.argtypes = [ctypes.c_void_p]
    lib.proven_ratelimit_sliding_window_free.restype = None

    # SafeCircuitBreaker
    lib.proven_circuit_breaker_create.argtypes = [ctypes.c_int,    # failure_threshold
                                                  ctypes.c_int,    # success_threshold
                                                  ctypes.c_double, # timeout
                                                  ctypes.c_int]    # half_open_max
    lib.proven_circuit_breaker_create.restype = HandleResult

    lib.proven_circuit_breaker_allow.argtypes = [ctypes.c_void_p]
    lib.proven_circuit_breaker_allow.restype = BoolResult

    lib.proven_circuit_breaker_record_success.argtypes = [ctypes.c_void_p]
    lib.proven_circuit_breaker_record_success.restype = ctypes.c_int

    lib.proven_circuit_breaker_record_failure.argtypes = [ctypes.c_void_p]
    lib.proven_circuit_breaker_record_failure.restype = ctypes.c_int

    lib.proven_circuit_breaker_state.argtypes = [ctypes.c_void_p]
    lib.proven_circuit_breaker_state.restype = IntResult  # 0=closed, 1=open, 2=half_open

    lib.proven_circuit_breaker_free.argtypes = [ctypes.c_void_p]
    lib.proven_circuit_breaker_free.restype = None

    # SafeRetry
    lib.proven_retry_calculate_delay.argtypes = [ctypes.c_int,     # attempt
                                                 ctypes.c_double,  # base_delay
                                                 ctypes.c_double,  # multiplier
                                                 ctypes.c_double,  # max_delay
                                                 ctypes.c_double]  # jitter
    lib.proven_retry_calculate_delay.restype = DoubleResult

    # SafeMonotonic
    lib.proven_monotonic_counter_create.argtypes = [ctypes.c_int64]
    lib.proven_monotonic_counter_create.restype = HandleResult

    lib.proven_monotonic_counter_next.argtypes = [ctypes.c_void_p]
    lib.proven_monotonic_counter_next.restype = IntResult

    lib.proven_monotonic_counter_get.argtypes = [ctypes.c_void_p]
    lib.proven_monotonic_counter_get.restype = IntResult

    lib.proven_monotonic_counter_free.argtypes = [ctypes.c_void_p]
    lib.proven_monotonic_counter_free.restype = None

    # SafeStateMachine
    lib.proven_state_machine_create.argtypes = [ctypes.c_char_p, ctypes.c_size_t]
    lib.proven_state_machine_create.restype = HandleResult

    lib.proven_state_machine_add_transition.argtypes = [ctypes.c_void_p,
                                                        ctypes.c_char_p, ctypes.c_size_t,
                                                        ctypes.c_char_p, ctypes.c_size_t]
    lib.proven_state_machine_add_transition.restype = ctypes.c_int

    lib.proven_state_machine_transition.argtypes = [ctypes.c_void_p,
                                                    ctypes.c_char_p, ctypes.c_size_t]
    lib.proven_state_machine_transition.restype = StringResult

    lib.proven_state_machine_current.argtypes = [ctypes.c_void_p]
    lib.proven_state_machine_current.restype = StringResult

    lib.proven_state_machine_can_transition.argtypes = [ctypes.c_void_p,
                                                        ctypes.c_char_p, ctypes.c_size_t]
    lib.proven_state_machine_can_transition.restype = BoolResult

    lib.proven_state_machine_free.argtypes = [ctypes.c_void_p]
    lib.proven_state_machine_free.restype = None

    # SafeGraph
    lib.proven_graph_create.argtypes = []
    lib.proven_graph_create.restype = HandleResult

    lib.proven_graph_add_edge.argtypes = [ctypes.c_void_p,
                                          ctypes.c_char_p, ctypes.c_size_t,
                                          ctypes.c_char_p, ctypes.c_size_t]
    lib.proven_graph_add_edge.restype = ctypes.c_int

    lib.proven_graph_has_cycle.argtypes = [ctypes.c_void_p]
    lib.proven_graph_has_cycle.restype = BoolResult

    lib.proven_graph_topological_sort.argtypes = [ctypes.c_void_p]
    lib.proven_graph_topological_sort.restype = StringResult  # JSON array

    lib.proven_graph_find_path.argtypes = [ctypes.c_void_p,
                                           ctypes.c_char_p, ctypes.c_size_t,
                                           ctypes.c_char_p, ctypes.c_size_t]
    lib.proven_graph_find_path.restype = StringResult  # JSON array

    lib.proven_graph_free.argtypes = [ctypes.c_void_p]
    lib.proven_graph_free.restype = None


# Lazy loading of the library
_lib: Optional[ctypes.CDLL] = None


def get_lib() -> ctypes.CDLL:
    """Get the loaded library, initializing if necessary."""
    global _lib
    if _lib is None:
        _lib = _load_library()
    return _lib


def check_status(status: int) -> None:
    """Check status code and raise ProvenError if not OK."""
    if status != ProvenStatus.OK:
        raise ProvenError(ProvenStatus(status))
